# Image_grabber_manga

./: .gitignore  LICENSE  Makefile  README.md  image_grabber.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  url_processor.py
.github/: dependabot.yml
.github/workflows/: ci.yml  wgrabber.yml
tests/: test_image_grabber.py  test_main.py  test_url_generator.py
wgrabber/: __init__.py  __main__.py  image_grabber.py  url_processor.py
